# bazel-warmup

./: BUILD  MODULE.bazel  WORKSPACE  maven_install.json
src/main/java/com/example/cmdline/: BUILD  Runner.java
src/main/kotlin/com/example/: Greeting.kt
src/test/java/com/example/cmdline/: BUILD  GreetingTest.java
